# meshtool

./: .gitignore  CMakeLists.txt  license.md  meshtool.cpp  png.h  readme.md
clouds/: material.mtl  material2.mtl
input/: test_mesh.ply
lodepng/: png.cpp  png.h
test_in/: vodka.blend  vodka.mtl
